feat: input harga & get harga
