# api/swagger.yml
@@ -1,5 +1,5 @@
 swagger: "2.0"
-basePath: /api
+# basePath: /
 host: localhost:8080
 info:
   version: 1.0.0
@@ -41,6 +41,51 @@ paths:
           description: error
           schema:
             $ref: "#/definitions/baseResponse"
+  ## Price
+  /price:
+    post:
+      tags:
+        - price
+      summary: input price
+      description: api for input price
+      operationId: SavePrice
+      parameters:
+        - name: data
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/priceData"
+      responses:
+        "201":
+          description: success
+          schema:
+            type: object
+            properties:
+              data:
+                $ref: "#/definitions/price"
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/baseResponse"
+    get:
+      tags:
+        - price
+      summary: get price
+      description: api for get current price
+      operationId: GetPrice
+      responses:
+        "200":
+          description: success
+          schema:
+            type: object
+            properties:
+              data:
+                $ref: "#/definitions/price"
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/baseResponse"
+
   # /:
   #   get:
   #     tags: ["todos"]
@@ -128,10 +173,42 @@ paths:
   #         schema:
   #           $ref: "#/definitions/error"
 definitions:
+  ## models
+  price:
+    allOf:
+      - $ref: "#/definitions/modelID"
+      - $ref: "#/definitions/modelLogTime"
+      - $ref: "#/definitions/priceData"
+  priceData:
+    type: object
+    properties:
+      topupPrice:
+        type: number
+        format: double
+      buybackPrice:
+        type: number
+        format: double
+  ## common
+  modelID:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int64
+        x-go-custom-tag: gorm:"type:int primary key auto_increment"
+  modelLogTime:
+    type: object
+    properties:
+      createdAt:
+        type: integer
+        format: date-time
+        x-go-custom-tag: gorm:"type:int;autoCreateTime"
+      updatedAt:
+        type: integer
+        format: date-time
+        x-go-custom-tag: gorm:"type:int;autoUpdateTime"
   baseResponse:
     type: object
-    required:
-      - message
     properties:
       code:
         type: integer
