# internal/apis/operations/price/save_price_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package price
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/yahfiilham/gold-store-demo/pkg/models"
+)
+
+// SavePriceCreatedCode is the HTTP code returned for type SavePriceCreated
+const SavePriceCreatedCode int = 201
+
+/*SavePriceCreated success
+
+swagger:response savePriceCreated
+*/
+type SavePriceCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *SavePriceCreatedBody `json:"body,omitempty"`
+}
+
+// NewSavePriceCreated creates SavePriceCreated with default headers values
+func NewSavePriceCreated() *SavePriceCreated {
+
+	return &SavePriceCreated{}
+}
+
+// WithPayload adds the payload to the save price created response
+func (o *SavePriceCreated) WithPayload(payload *SavePriceCreatedBody) *SavePriceCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the save price created response
+func (o *SavePriceCreated) SetPayload(payload *SavePriceCreatedBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *SavePriceCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*SavePriceDefault error
+
+swagger:response savePriceDefault
+*/
+type SavePriceDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.BaseResponse `json:"body,omitempty"`
+}
+
+// NewSavePriceDefault creates SavePriceDefault with default headers values
+func NewSavePriceDefault(code int) *SavePriceDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &SavePriceDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the save price default response
+func (o *SavePriceDefault) WithStatusCode(code int) *SavePriceDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the save price default response
+func (o *SavePriceDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the save price default response
+func (o *SavePriceDefault) WithPayload(payload *models.BaseResponse) *SavePriceDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the save price default response
+func (o *SavePriceDefault) SetPayload(payload *models.BaseResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *SavePriceDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
