# pkg/models/base_response.go
@@ -8,10 +8,8 @@ package models
 import (
 	"context"
 
-	"github.com/go-openapi/errors"
 	"github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
 )
 
 // BaseResponse base response
@@ -23,30 +21,11 @@ type BaseResponse struct {
 	Code int64 `json:"code,omitempty"`
 
 	// message
-	// Required: true
-	Message *string `json:"message"`
+	Message string `json:"message,omitempty"`
 }
 
 // Validate validates this base response
 func (m *BaseResponse) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateMessage(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *BaseResponse) validateMessage(formats strfmt.Registry) error {
-
-	if err := validate.Required("message", "body", m.Message); err != nil {
-		return err
-	}
-
 	return nil
 }
 
