# pkg/models/model_log_time.go
@@ -1,0 +1,53 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ModelLogTime model log time
+//
+// swagger:model modelLogTime
+type ModelLogTime struct {
+
+	// created at
+	CreatedAt int64 `json:"createdAt,omitempty" gorm:"type:int;autoCreateTime"`
+
+	// updated at
+	UpdatedAt int64 `json:"updatedAt,omitempty" gorm:"type:int;autoUpdateTime"`
+}
+
+// Validate validates this model log time
+func (m *ModelLogTime) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this model log time based on context it is used
+func (m *ModelLogTime) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ModelLogTime) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ModelLogTime) UnmarshalBinary(b []byte) error {
+	var res ModelLogTime
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
