# pkg/models/price.go
@@ -1,0 +1,139 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// Price price
+//
+// swagger:model price
+type Price struct {
+	ModelID
+
+	ModelLogTime
+
+	PriceData
+}
+
+// UnmarshalJSON unmarshals this object from a JSON structure
+func (m *Price) UnmarshalJSON(raw []byte) error {
+	// AO0
+	var aO0 ModelID
+	if err := swag.ReadJSON(raw, &aO0); err != nil {
+		return err
+	}
+	m.ModelID = aO0
+
+	// AO1
+	var aO1 ModelLogTime
+	if err := swag.ReadJSON(raw, &aO1); err != nil {
+		return err
+	}
+	m.ModelLogTime = aO1
+
+	// AO2
+	var aO2 PriceData
+	if err := swag.ReadJSON(raw, &aO2); err != nil {
+		return err
+	}
+	m.PriceData = aO2
+
+	return nil
+}
+
+// MarshalJSON marshals this object to a JSON structure
+func (m Price) MarshalJSON() ([]byte, error) {
+	_parts := make([][]byte, 0, 3)
+
+	aO0, err := swag.WriteJSON(m.ModelID)
+	if err != nil {
+		return nil, err
+	}
+	_parts = append(_parts, aO0)
+
+	aO1, err := swag.WriteJSON(m.ModelLogTime)
+	if err != nil {
+		return nil, err
+	}
+	_parts = append(_parts, aO1)
+
+	aO2, err := swag.WriteJSON(m.PriceData)
+	if err != nil {
+		return nil, err
+	}
+	_parts = append(_parts, aO2)
+	return swag.ConcatJSON(_parts...), nil
+}
+
+// Validate validates this price
+func (m *Price) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// validation for a type composition with ModelID
+	if err := m.ModelID.Validate(formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with ModelLogTime
+	if err := m.ModelLogTime.Validate(formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with PriceData
+	if err := m.PriceData.Validate(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ContextValidate validate this price based on the context it is used
+func (m *Price) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	// validation for a type composition with ModelID
+	if err := m.ModelID.ContextValidate(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with ModelLogTime
+	if err := m.ModelLogTime.ContextValidate(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+	// validation for a type composition with PriceData
+	if err := m.PriceData.ContextValidate(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Price) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Price) UnmarshalBinary(b []byte) error {
+	var res Price
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
