# pkg/models/price_data.go
@@ -1,0 +1,53 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// PriceData price data
+//
+// swagger:model priceData
+type PriceData struct {
+
+	// buyback price
+	BuybackPrice float64 `json:"buybackPrice,omitempty"`
+
+	// topup price
+	TopupPrice float64 `json:"topupPrice,omitempty"`
+}
+
+// Validate validates this price data
+func (m *PriceData) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this price data based on context it is used
+func (m *PriceData) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PriceData) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PriceData) UnmarshalBinary(b []byte) error {
+	var res PriceData
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
